# mbt_booking_agent

./: .dockerignore  .dockerignore.backend  .dockerignore.frontend  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  alembic.ini  docker-compose.override.yaml  docker-compose.override.yml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: build-and-publish.yml
.qoder/agents/: docs-updater.md
.qoder/rules/: common.md  convensions.md  workflow.md
alembic/: env.py
alembic/versions/: 2a84cf51810b_initial_migration.py  8e3c7a9b2f1d_add_indexes_and_constraints.py  9f8e2c4d1a3b_add_chat_tables.py  a1b2c3d4e5f6_add_consumable_notes.py
backend/: config.py  database.py  dependencies.py  exceptions.py  main.py
backend/api/: __init__.py  bookings.py  chat.py  consumable_notes.py  dashboard.py  health.py  houses.py  query.py  tariffs.py  users.py
backend/fixtures/: __init__.py  demo_data.json  load_fixtures.py
backend/models/: __init__.py  booking.py  chat.py  consumable_note.py  house.py  tariff.py  user.py
backend/repositories/: __init__.py  booking.py  chat.py  consumable_note.py  house.py  tariff.py  user.py
backend/schemas/: __init__.py  booking.py  chat.py  common.py  consumable_note.py  dashboard.py  house.py  query.py  tariff.py  user.py
bot/: config.py  main.py
docs/: architecture.md  data-model.md  doc-audit.md  how-to-get-tokens.md  idea.md  integrations.md  onboarding.md  plan.md  vision.md
web/: eslint.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
(+275 files in other folders)
