[project]
name = "booking-bot"
version = "0.1.0"
description = "Telegram-бот для бронирования загородного жилья"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.4,<4",
    "openai>=1.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
]

[tool.ruff]
line-length = 88
target-version = "py312"
