[project]
name = "booking-bot"
version = "0.1.0"
description = "Telegram-бот для бронирования загородного жилья"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.4,<4",
    "openai>=1.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
